[gd_scene load_steps=6 format=2]

[ext_resource path="res://Crew/Claims/Claims.gd" type="Script" id=1]
[ext_resource path="res://Crew/Claims/Connector.gd" type="Script" id=2]
[ext_resource path="res://Crew/Claims/Claim.tscn" type="PackedScene" id=3]
[ext_resource path="res://Crew/Claims/ClaimTree.gd" type="Script" id=4]
[ext_resource path="res://Crew/Claims/EditButtons.gd" type="Script" id=5]

[node name="Claims" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 222.0
margin_top = 86.0
margin_right = 802.0
margin_bottom = 514.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 580.0
margin_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_top = 9.0
margin_right = 258.0
margin_bottom = 30.0
text = "Standard"

[node name="PrisonToggle" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 262.0
margin_right = 338.0
margin_bottom = 40.0
action_mode = 0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 342.0
margin_top = 9.0
margin_right = 387.0
margin_bottom = 30.0
text = "Prison"

[node name="ClaimTree" type="GridContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 580.0
margin_bottom = 384.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 9
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c1" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="c1_c2" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 100.0
margin_top = 45.0
margin_right = 120.0
margin_bottom = 55.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c2" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_right = 220.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="c2_c3" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 220.0
margin_top = 45.0
margin_right = 240.0
margin_bottom = 55.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c3" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 340.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="c3_c4" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 340.0
margin_top = 45.0
margin_right = 360.0
margin_bottom = 55.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c4" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_right = 460.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="c4_c5" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 460.0
margin_top = 45.0
margin_right = 480.0
margin_bottom = 55.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c5" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_right = 580.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="c1_c6" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 45.0
margin_top = 100.0
margin_right = 55.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 105.0
margin_top = 100.0
margin_right = 115.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c2_c7" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 165.0
margin_top = 100.0
margin_right = 175.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble2" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 225.0
margin_top = 100.0
margin_right = 235.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c3_c8" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 285.0
margin_top = 100.0
margin_right = 295.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble3" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 345.0
margin_top = 100.0
margin_right = 355.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c4_c9" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 405.0
margin_top = 100.0
margin_right = 415.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble4" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 465.0
margin_top = 100.0
margin_right = 475.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c5_c10" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 525.0
margin_top = 100.0
margin_right = 535.0
margin_bottom = 120.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c6" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 100.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )

[node name="c6_c7" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 100.0
margin_top = 165.0
margin_right = 120.0
margin_bottom = 175.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c7" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 120.0
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )

[node name="c7_c8" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 220.0
margin_top = 165.0
margin_right = 240.0
margin_bottom = 175.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c8" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 120.0
margin_right = 340.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
starting_claim = true

[node name="c8_c9" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 340.0
margin_top = 165.0
margin_right = 360.0
margin_bottom = 175.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c9" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 120.0
margin_right = 460.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )

[node name="c9_c10" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 460.0
margin_top = 165.0
margin_right = 480.0
margin_bottom = 175.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c10" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 120.0
margin_right = 580.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )

[node name="c6_c11" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 45.0
margin_top = 220.0
margin_right = 55.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble5" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 105.0
margin_top = 220.0
margin_right = 115.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c7_c12" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 165.0
margin_top = 220.0
margin_right = 175.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble6" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 225.0
margin_top = 220.0
margin_right = 235.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c8_c13" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 285.0
margin_top = 220.0
margin_right = 295.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble7" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 345.0
margin_top = 220.0
margin_right = 355.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c9_c14" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 405.0
margin_top = 220.0
margin_right = 415.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="invisble8" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 465.0
margin_top = 220.0
margin_right = 475.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )

[node name="c10_c15" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 525.0
margin_top = 220.0
margin_right = 535.0
margin_bottom = 240.0
rect_min_size = Vector2( 10, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c11" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 100.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )

[node name="c11_c12" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 100.0
margin_top = 285.0
margin_right = 120.0
margin_bottom = 295.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c12" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 240.0
margin_right = 220.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )

[node name="c12_c13" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 220.0
margin_top = 285.0
margin_right = 240.0
margin_bottom = 295.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c13" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 240.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )

[node name="c13_c14" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 340.0
margin_top = 285.0
margin_right = 360.0
margin_bottom = 295.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c14" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 240.0
margin_right = 460.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )

[node name="c14_c15" type="ColorRect" parent="VBoxContainer/ClaimTree"]
margin_left = 460.0
margin_top = 285.0
margin_right = 480.0
margin_bottom = 295.0
rect_min_size = Vector2( 20, 10 )
size_flags_horizontal = 5
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="c15" parent="VBoxContainer/ClaimTree" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 240.0
margin_right = 580.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )

[node name="EditButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 388.0
margin_right = 580.0
margin_bottom = 428.0
script = ExtResource( 5 )

[node name="EditableButton" type="Button" parent="VBoxContainer/EditButtons"]
margin_right = 21.0
margin_bottom = 40.0
toggle_mode = true
pressed = true
text = "..."

[node name="RestrictedPathsButton" type="CheckButton" parent="VBoxContainer/EditButtons"]
margin_left = 333.0
margin_right = 527.0
margin_bottom = 40.0
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Restricted Paths"

[node name="RecalculateButton" type="Button" parent="VBoxContainer/EditButtons"]
margin_left = 531.0
margin_right = 580.0
margin_bottom = 40.0
size_flags_horizontal = 8
text = "Reset"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/PrisonToggle" to="." method="_on_PrisonToggle_toggled"]
[connection signal="toggled" from="VBoxContainer/EditButtons/EditableButton" to="VBoxContainer/EditButtons" method="_on_toggle_edit"]
[connection signal="toggled" from="VBoxContainer/EditButtons/RestrictedPathsButton" to="VBoxContainer/ClaimTree" method="_on_RestrictedPathsButton_toggled"]
[connection signal="pressed" from="VBoxContainer/EditButtons/RecalculateButton" to="." method="_on_RecalculateButton_pressed"]
